Mode dependency fun!

--- a/package.json
+++ b/package.json
@@ -27,6 +27,6 @@
     "connect-pg-simple": "*",
     "node-uuid": "*",
     "validator": "*" ,
-    "express-params":"*"
+    "passport":"*"
   }
 }
